# video_player_linux_fix

./: .gitignore
.github/workflows/: clang-tidy.yaml  codeql.yml  ivi-homescreen.yaml
.github/workflows/patches/filament/: 0001-disable-backend-tests.patch  0002-install-required-files.patch  0003-move-include-contents-to-include-filament.patch  0004-move-libraries-so-they-install.patch  0006-spirv-tools-threads.patch
plugins/: CMakeLists.txt  config_plugins.h.in  generated_plugin_registrant.cc
plugins/camera/: CMakeLists.txt  camera_plugin.cc
plugins/camera_pipewire/: CMakeLists.txt  CameraManager.cc  CameraManager.h  CameraStream.cc  CameraStream.h  README.md  camera_plugin.cc  camera_plugin.h  camera_plugin_c_api.cc  messages.g.cc  messages.g.h
plugins/camera_pipewire/include/camera_pipewire/: camera_plugin_c_api.h
plugins/common/: CMakeLists.txt
plugins/common/curl_client/: curl_client.cc  curl_client.h
plugins/common/curl_client/test/: CMakeLists.txt  test_curl_client.cc
plugins/common/string/: string_tools.h
plugins/filament_view/: .clang-format  CMakeLists.txt  filament_view_plugin.cc  filament_view_plugin.h  filament_view_plugin_c_api.cc  messages.g.cc  messages.g.h
plugins/filament_view/core/: lifecycle_participant.h
plugins/filament_view/core/components/base/: component.h
plugins/filament_view/core/components/derived/: animation.cc  animation.h  basetransform.cc  basetransform.h  camera.cc  camera.h  collidable.cc  (+11 more)
plugins/filament_view/core/include/: additionalmath.h  color.h  file_utils.h  literals.h  resource.h  shapetypes.h
plugins/filament_view/core/scene/: view_target.cc  view_target.h
plugins/filament_view/core/systems/: ecs.cc  ecs.h  ecsystems_manager.cc  ecsystems_manager.h
plugins/filament_view/core/utils/: asserts.cc  asserts.h  bounding_volumes.h  deserialize.cc  deserialize.h  entitytransforms.cc  entitytransforms.h  filament_types.h  hdr_loader.cc  hdr_loader.h  ibl_profiler.h  identifiable_type.h  kvtree.cc  kvtree.h  smarter_pointers.h  uuidGenerator.cc  uuidGenerator.h  vectorutils.cc  vectorutils.h
plugins/filament_view/include/filament_view/: filament_view_plugin_c_api.h
plugins/filament_view/test/: mvp.cc
plugins/file_selector/: messages.cc
plugins/flatpak/: CMakeLists.txt  appstream_catalog.cc  appstream_catalog.h  component.cc  component.h  flatpak_plugin.cc  flatpak_plugin.h  flatpak_shim.cc  flatpak_shim.h  icon.cc  icon.h  messages.g.cc  messages.g.h  release.cc  release.h  screenshot.cc  screenshot.h
plugins/flatpak/cache/: CMakeLists.txt  cache_config.h  cache_manager.cc  cache_manager.h
plugins/flatpak/cache/interfaces/: cache_observer.h  cache_storage.h  network_fetcher.h
plugins/flatpak/cache/network/: curl_network_fetcher.cc  curl_network_fetcher.h
plugins/flatpak/cache/observers/: default_cache_observer.h  metrics_cache_observer.h  observers.cc
plugins/flatpak/cache/operations/: cache_operation_template.h  encodablelist_cache_operation.h  flatpak_application_cache_operation.h  flatpak_installation_cache_operation.h
plugins/flatpak/cache/storage/: sqlite_cache_storage.cc  sqlite_cache_storage.h
plugins/flatpak/cache/test/: CMakeLists.txt  test_cache_manager.cc
plugins/flatpak/cache/utils/: cache_serializers.cc  cache_serializers.h
plugins/flatpak/test/: CMakeLists.txt  test_flatpak.cc
plugins/pdf/: libpdfium.cc
plugins/video_player_linux/: CMakeLists.txt  messages.g.cc  nv12.h  video_player.cc  video_player.h  video_player_plugin.cc  video_player_plugin.h
plugins/webview_flutter_view/: CMakeLists.txt
(+84 files in other folders)
